style: correct footer selector for proper alignment

--- a/CSS_advanced/styles/19-style.css
+++ b/CSS_advanced/styles/19-style.css
@@ -189,6 +189,6 @@ ul.row{
     font-size: var(--font-size-small);
     color: var(--text-color);
 }
-footer.ul{
+.footer ul{
     text-align: right;
 }
